--- a/index.html
+++ b/index.html
@@ -1,26 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="João Lima">
-  <meta name="description" content="Espaço de leitura e estudo com café integrado, oferecendo conforto, inspiração e bons livros.">
-  <meta name="keywords" content="biblioteca, cafeteria, livros, espaço de leitura, estudo, café, acervo, leitura, ambiente aconchegante, biblioteca com café, biblioteca moderna.">
+  <meta name="description"
+    content="Espaço de leitura e estudo com café integrado, oferecendo conforto, inspiração e bons livros.">
+  <meta name="keywords"
+    content="biblioteca, cafeteria, livros, espaço de leitura, estudo, café, acervo, leitura, ambiente aconchegante, biblioteca com café, biblioteca moderna.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Café</title>
 </head>
+
 <body>
   <div class="page">
-    teste
-  <header class="header">
+
+    <header class="header">
+      <nav class="nav">
+        <img src="./images/logo_coffeeshop_dark.svg" alt="" class="nav__logo">
+
+        <ul class="nav__links">
+          <li><a class="nav__link" href="#recipes">Receitas</a></li>
+          <li><a class="nav__link" href="#reservation">Reserve uma mesa</a></li>
+          <li><a class="nav__link" href="#contatos">Contatos</a></li>
+        </ul>
+      </nav>
+
+
+      <h1 class="header__title"><span class="header__span-accent">Café especial</span> na biblioteca Triple Peaks</h1>
+      <p class="header__description">Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+        você e vibrações aconchegantes para soltar a criatividade.</p>
+
+      <img src="./images/inside_coffee_shop.png" alt="" class="header__image">
+
+      <div class="header__footer">
+        <p class="header__paragraph">Hórários:</p>
+        <p class="header__paragraph "> Segunda a sexta (10:00 - 19:00)</p>
+        <p class="header__paragraph "> Sábado a domingo (11:00 - 18:00)</p>
+      </div>
+      <p class="header__paragraph header__paragraph_address">200 Success Avenue, a cidade de Triple Peaks</p>
+
+
+
     </header>
     <main class="content">
-      <section class="recipes">
+      <section class="recipes" id="recipes">
+        <h2 class="recipes__title">Receitas</h2>
+        <p class="recipes__subtitle">Confira algumas receitas que coletamos para seu lanchinho caseiro:</p>
+        <div class="recipes__videos">
+          <div class="recipes__video-item">
+            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=R2DgnOkOAQIjUY-N"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="recipes__video-caption">
+              <p class="recipes__video-caption-text">Receita Aeropress</p>
+              <p class="recipes__video-caption-minutes">~5 min</p>
+            </div>
+          </div>
+          <div class="recipes__video-item">
+            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=j8Vn5dhdyxEpqW-N"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="recipes__video-caption">
+              <p class="recipes__video-caption-text">Receita de Prensa Francesa</p>
+              <p class="recipes__video-caption-minutes">~15 min</p>
+            </div>
+          </div>
+        </div>
+
 
       </section>
       <section class="reservation">
@@ -36,4 +93,5 @@
 
 
 </body>
+
 </html>
