--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
       </section>
-      <section class="reservation">
+      <section class="reservation" id="reservation">
 
       </section>
 
