--- a/index.html
+++ b/index.html
@@ -1,97 +1,166 @@
 <!DOCTYPE html>
 <html lang="pt">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="João Lima" />
+    <meta
+      name="description"
+      content="Espaço de leitura e estudo com café integrado, oferecendo conforto, inspiração e bons livros."
+    />
+    <meta
+      name="keywords"
+      content="biblioteca, cafeteria, livros, espaço de leitura, estudo, café, acervo, leitura, ambiente aconchegante, biblioteca com café, biblioteca moderna."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
+    <title>Café</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="João Lima">
-  <meta name="description"
-    content="Espaço de leitura e estudo com café integrado, oferecendo conforto, inspiração e bons livros.">
-  <meta name="keywords"
-    content="biblioteca, cafeteria, livros, espaço de leitura, estudo, café, acervo, leitura, ambiente aconchegante, biblioteca com café, biblioteca moderna.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="./vendor/normalize.css">
-  <link rel="stylesheet" href="./pages/index.css">
-  <title>Café</title>
-</head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt=""
+            class="nav__logo"
+          />
 
-<body>
-  <div class="page">
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#recipes">Receitas</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#reservation">Reserve uma mesa</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#contatos">Contatos</a>
+            </li>
+          </ul>
+        </nav>
 
-    <header class="header">
-      <nav class="nav">
-        <img src="./images/logo_coffeeshop_dark.svg" alt="" class="nav__logo">
+        <h1 class="header__title">
+          <span class="header__span-accent">Café especial</span> na biblioteca
+          Triple Peaks
+        </h1>
+        <p class="header__description">
+          Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+          você e vibrações aconchegantes para soltar a criatividade.
+        </p>
 
-        <ul class="nav__links">
-          <li><a class="nav__link" href="#recipes">Receitas</a></li>
-          <li><a class="nav__link" href="#reservation">Reserve uma mesa</a></li>
-          <li><a class="nav__link" href="#contatos">Contatos</a></li>
-        </ul>
-      </nav>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt=""
+          class="header__image"
+        />
 
-
-      <h1 class="header__title"><span class="header__span-accent">Café especial</span> na biblioteca Triple Peaks</h1>
-      <p class="header__description">Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
-        você e vibrações aconchegantes para soltar a criatividade.</p>
-
-      <img src="./images/inside_coffee_shop.png" alt="" class="header__image">
-
-      <div class="header__footer">
-        <p class="header__paragraph">Hórários:</p>
-        <p class="header__paragraph "> Segunda a sexta (10:00 - 19:00)</p>
-        <p class="header__paragraph "> Sábado a domingo (11:00 - 18:00)</p>
-      </div>
-      <p class="header__paragraph header__paragraph_address">200 Success Avenue, a cidade de Triple Peaks</p>
-
-
-
-    </header>
-    <main class="content">
-      <section class="recipes" id="recipes">
-        <h2 class="recipes__title">Receitas</h2>
-        <p class="recipes__subtitle">Confira algumas receitas que coletamos para seu lanchinho caseiro:</p>
-        <div class="recipes__videos">
-          <div class="recipes__video-item">
-            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=R2DgnOkOAQIjUY-N"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <div class="recipes__video-caption">
-              <p class="recipes__video-caption-text">Receita Aeropress</p>
-              <p class="recipes__video-caption-minutes">~5 min</p>
-            </div>
-          </div>
-          <div class="recipes__video-item">
-            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=j8Vn5dhdyxEpqW-N"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <div class="recipes__video-caption">
-              <p class="recipes__video-caption-text">Receita de Prensa Francesa</p>
-              <p class="recipes__video-caption-minutes">~15 min</p>
-            </div>
-          </div>
+        <div class="header__footer">
+          <p class="header__paragraph">Hórários:</p>
+          <p class="header__paragraph">Segunda a sexta (10:00 - 19:00)</p>
+          <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
         </div>
+        <p class="header__paragraph header__paragraph_address">
+          200 Success Avenue, a cidade de Triple Peaks
+        </p>
+      </header>
+      <main class="content">
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtitle">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </p>
+          <div class="recipes__videos">
+            <div class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=R2DgnOkOAQIjUY-N"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p class="recipes__video-caption-text">Receita Aeropress</p>
+                <p class="recipes__video-caption-minutes">~5 min</p>
+              </div>
+            </div>
+            <div class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=j8Vn5dhdyxEpqW-N"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p class="recipes__video-caption-text">
+                  Receita de Prensa Francesa
+                </p>
+                <p class="recipes__video-caption-minutes">~15 min</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Reservar uma mesa</h2>
+          <form action="#" class="form reservation__form">
+            <fieldset class="fieldset__form">
+              <label for="nome" class="form__label">Nome *</label>
+              <input
+                type="text"
+                id="nome"
+                class="form__input"
+                placeholder="Nome"
+              />
 
-
-      </section>
-      <section class="reservation" id="reservation">
-
-      </section>
-
-    </main>
-    <footer class="footer">
-
-    </footer>
-
-  </div>
-
-
-</body>
-
+              <label for="convidados" class="form__label"
+                >Número de convidados *</label
+              >
+              <input
+                id="convidados"
+                type="number"
+                class="form__input"
+                min="1"
+                max="8"
+                placeholder="1-8"
+              />
+              <label for="dataHora" class="form__label">Data e hora * </label>
+              <input type="datetime-local" id="dataHora" class="form__input" />
+              <label for="email" class="form__label">Seu e-mail *</label>
+              <input
+                id="email"
+                type="email"
+                class="form__input"
+                placeholder="email@email.com"
+              />
+              <button type="submit" class="form__button">
+                Reservar uma mesa
+              </button>
+              <div class="form__checkbox">
+                <input
+                  type="checkbox"
+                  name="termos"
+                  id="termos"
+                  class="form__checkbox-item"
+                />
+                <label for="termos" class="form__label"
+                  >Eu concordo com os termos de uso</label
+                >
+              </div>
+            </fieldset>
+          </form>
+        </section>
+      </main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
