--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
           <form action="#" class="form reservation__form">
-            <fieldset class="fieldset__form">
+            <fieldset class="form__fieldset">
               <label for="nome" class="form__label">Nome *</label>
               <input
                 type="text"
