Adiciona texto alternativo para as imagens utilizadas no footer

--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
               <li class="footer__list-item">
                 <img
                 src="./images/facebook_white.svg"
-                alt=""
+                alt="Logo da rede social Facebook"
                 class="footer__social-icon"
-                /><a href="" class="footer__social-link">Facebook</a>
+                /><a href="#" class="footer__social-link">Facebook</a>
               </li>
               <li class="footer__list-item">
                 <img
                   src="./images/instagram_white.svg"
-                  alt=""
+                  alt="Logo da rede social Instagram
                   class="footer__social-icon"
-                  /><a href="" class="footer__social-link">Instagram</a>
+                  /><a href="#" class="footer__social-link">Instagram</a>
                 </li>
               </ul>
             </div>
