Correção na segunda classe footer__social-icon

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <li class="footer__list-item">
                 <img
                   src="./images/instagram_white.svg"
-                  alt="Logo da rede social Instagram
+                  alt="Logo da rede social Instagram"
                   class="footer__social-icon"
                   /><a href="#" class="footer__social-link">Instagram</a>
                 </li>
