Pequenas atualizações gerais

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav__link" href="#reservation">Reserve uma mesa</a>
             </li>
             <li>
-              <a class="nav__link" href="#contatos">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -168,7 +168,7 @@
           </form>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="footer__content">
 
           <img
